tests/asm-link/_consistency/section-union/org-conflict/rgbasm.err
error: cannot place the section at address $babe
   ╭─[ one-two.asm:7:15 ]
   │
 7 │ SECTION UNION "conflicting address", SRAM[ADDR]
   │               ──────────┬──────────  
   │                         ╰──────────── the section is already fixed at address $beef
───╯
1 error generated.
